[project]
name = "flightradar"
version = "1.5.4"
description = "Flightradar is a Python backend for tracking and managing flight data."
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.1.31",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pymongo==4.12.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "typer==0.15.1",
    "uvicorn==0.34.2",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "requests-mock==1.8.0",
]
